--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,7 @@
 h1. Sunlight Labs API Gem
 
+NOTE: This file is formatted in Textile and best viewed on "GitHub":http://github.com/luigi/sunlight.
+
 h2. Description
 
 A little gem that integrates with the Sunlight Labs API. From the "official site":http://services.sunlightlabs.com/api/:
@@ -8,7 +10,7 @@ bq. The Sunlight Labs API provides methods for obtaining basic information on Me
 
 Full API documentation available "here":http://services.sunlightlabs.com/api/docs/. 
 
-Also, the Sunlight gem integrates with the Google Maps API for "street address geocoding":http://code.google.com/apis/maps/documentation/services.html#Geocoding. Because some zip codes overlap two or more congressional districts, passing in a latitude/longitude will give users the most accurate information. Since it's highly unlikely a user would know their exact lat/lng, the Google Maps API is used to translate a street address string into a lat/lng pair.
+Also, the Sunlight gem integrates with the Google Maps API for "street address geocoding":http://code.google.com/apis/maps/documentation/services.html#Geocoding. Because some zip codes overlap two or more congressional districts, passing in a latitude/longitude will give users the most accurate information. Since it's highly unlikely a user would know their exact lat/long, the Google Maps API is used to translate a street address string into a lat/long pair.
 
 
 h2. Installation
@@ -30,11 +32,75 @@ Or, if you're adventurous, the latest dev version (which should be quite stable)
 
 
 
-h2. Usage
+h2. Set Up
 
 First, register for an API key "here":http://services.sunlightlabs.com/api/register/. 
 
+Then, you'll want to stick the following lines somewhere in your Ruby environment.
 
+<code>
+  require 'rubygems'
+  require 'sunlight'
+  include Sunlight
+  Sunlight.api_key = 'yourapikeyfromtheurlabove'
+</code>
+
+If you're testing this out in IRB, you'll run them one at a time. Using Rails? Stick them in a file called @sunlight.rb@ in RAILS_ROOT/config/initializers.
+
+h2. Usage
+
+Now, it's time to get to the good stuff. The most useful method is @Legislator#all_for@:
+
+<pre><code>
+  congresspeople = Legislator.all_for(:address => "123 Fifth Ave New York, NY 10003")
+  senior_senator = congresspeople[:senior_senator]
+  junior_senator = congresspeople[:junior_senator]
+  representative = congresspeople[:representative]
+
+  junior_senator.firstname          # returns "Hillary" 
+  junior_senator.lastname           # returns "Clinton"   
+  junior_senator.congress_office    # returns "476 Russell Senate Office Building"
+  junior_senator.phone              # returns "202-224-4451"  
+</code></pre>
+
+Note that you should make the best attempt to get a full street address. A five-digit zip-code alone won't cut it, as there may be multiple congressional districts in a single zip code (there are ways to deal with this below). Make sure to review all the available fields from the "Sunlight Labs API":http://services.sunlightlabs.com/api/docs/legislators/.
+
+So @Legislator#all_for@ returns a hash of @Legislator@ objects, and the keys are @:senior_senator@, @:junior_senator@, and @:representative@. You can also pass in a lat/long pair:
+
+<pre><code>
+  congresspeople = Legislator.all_for(:latitude => 33.876145, :longitude => -84.453789)
+</code></pre>
+
+This bypasses the geocoding necessary by the Google Maps API. For social networks and other applications with a User object, it makes sense to geocode the address up front and save the lat/long data in the local database. Then, use the lat/long pair instead of address, which cuts a substantial bit time from the @Legislator#all_for@ request since the Google Maps API Geocoding function doesn't have to be called.
+
+You can also use the @Legislator#all_where@ method for searching based on available fields. You'll get back an array of Legislator objects:
+
+<pre><code>
+  johns = Legislator.all_where(:firstname => "John")
+  floridians = Legislator.all_where(:state => "FL")
+  dudes = Legislator.all_where(:gender => "M")
+
+  johns.each do |john|
+    # do stuff
+  end
+</code></pre>
+
+There's also the @District@ object. @District#get@ takes in either lat/long or an address and does it's best to return correct Congressional District:
+
+<pre><code>
+  district = District.get(:latitude => 33.876145, :longitude => -84.453789)
+  district.state            # returns "GA"
+  district.number           # returns "6"
+  
+  district = District.get(:address => "123 Fifth Ave New York, NY") 
+</code></pre>
+
+Finally, two more methods, @District.all_from_zipcode@ and @District.zipcodes_in@, help you out when all you have is a five-digit zip code and want to make sure you account for all the districts in a zip code, or if you want to get back all zipcodes in a given district.
+
+<pre><code>
+  districts = District.all_from_zipcode(90210)    # returns array of District objects
+  zipcodes = District.zipcodes_in("NY", "10")     # returns array of zip codes as strings  ["11201", "11202", "11203",...]
+</code></pre>
 
 
 h2. License
