--- a/README.textile
+++ b/README.textile
@@ -49,7 +49,11 @@ If you're testing this out in IRB, you'll run them one at a time. If you're usin
 
 h2. Usage
 
-Now, it's time to get to the good stuff. The most useful method is @Legislator#all_for@:
+The Sunlight gem currently supports the Legislator and District objects. The Lobbyist object is coming soon.
+
+h3. Legislator
+
+Time to get to the good stuff. The most useful method is @Legislator#all_for@:
 
 <pre><code>
   congresspeople = Legislator.all_for(:address => "123 Fifth Ave New York, NY 10003")
@@ -63,7 +67,7 @@ Now, it's time to get to the good stuff. The most useful method is @Legislator#a
   junior_senator.phone              # returns "202-224-4451"  
 </code></pre>
 
-Note that you should make the best attempt to get a full street address, as that is geocoded behind the scenes into a lat/long pair. A five-digit zip code alone won't cut it, as there may be multiple congressional districts in a single zip code (there are ways to deal with this below). If you pass in a zip+4, then you'll get much better geocoding results.
+Note that you should make the best attempt to get a full street address, as that is geocoded behind the scenes into a lat/long pair. If all you have is a five-digit zip code, you should not use @Legislator#all_for@, instead opting for @Legislator#all_in_zipcode@ (see below). If you pass in a zip+4, then go ahead and use @Legislator#all_for@.
 
 So @Legislator#all_for@ returns a hash of @Legislator@ objects, and the keys are @:senior_senator@, @:junior_senator@, and @:representative@. Make sure to review all the available fields from the "Sunlight Labs API":http://services.sunlightlabs.com/api/docs/legislators/. You can also pass in a lat/long pair:
 
@@ -73,7 +77,18 @@ So @Legislator#all_for@ returns a hash of @Legislator@ objects, and the keys are
 
 This bypasses the geocoding necessary by the Google Maps API. For social networks and other applications with a User object, it makes sense to geocode the user's address up front and save the lat/long data in the local database. Then, use the lat/long pair instead of address, which cuts a substantial bit of time from the @Legislator#all_for@ request since the Google Maps API Geocoding function doesn't have to be called.
 
-You can also use the @Legislator#all_where@ method for searching based on available fields. You'll get back an array of @Legislator@ objects:
+Have a five-digit zip code only? You can use the @Legislator#all_in_zipcode@ method, but keep in mind that a single zip may have multiple U.S. Representatives, as congressional district lines frequently divide populous zip codes. Unlike @Legislator#all_for@, this method returns an array of legislators, and it'll be up to you to parse through them (there will be a senior senator, a junior senator, and one or more representatives).
+
+<pre><code>
+	members_of_congress = Legislator.all_in_zipcode(90210)
+	
+	members_of_congress.each do |member|
+		# do stuff
+	end
+	
+</code></pre>
+
+You can also use the @Legislator#all_where@ method for searching based on available fields. Again, you'll get back an array of @Legislator@ objects:
 
 <pre><code>
   johns = Legislator.all_where(:firstname => "John")
@@ -85,6 +100,17 @@ You can also use the @Legislator#all_where@ method for searching based on availa
   end
 </code></pre>
 
+Lastly, to provide your users with a name search functionality, use @Legislator#search_by_name@, which uses fuzzy matching to compensate for nicknames and misspellings. So "Teddy Kennedey" (real name Edward Kennedy) and "Jack Murtha" (real name John Murtha) will return the correct matches. You can specify a higher confidence threshold (default set to 0.80) if you feel that the matches being returned aren't accurate enough. This also returns an array of @Legislator@ objects:
+
+<pre><code>
+	legislators = Legislator.search_by_name("Teddy Kennedey")
+	legislators = Legislator.search_by_name("Johnny Boy Kerry", 0.91)
+</code></pre>
+
+
+h3. District
+
+
 There's also the @District@ object. @District#get@ takes in either lat/long or an address and does it's best to return the correct Congressional District:
 
 <pre><code>
@@ -95,7 +121,7 @@ There's also the @District@ object. @District#get@ takes in either lat/long or a
   district = District.get(:address => "123 Fifth Ave New York, NY") 
 </code></pre>
 
-Finally, two more methods, @District.all_from_zipcode@ and @District.zipcodes_in@, help you out when all you have is a five-digit zip code and want to make sure you account for all the districts in a zip code, or if you want to get back all zipcodes in a given district.
+Finally, two more methods, @District.all_from_zipcode@ and @District.zipcodes_in@, help you out when you want to get all districts in a given zip code, or if you want to get back all zip codes in a given district.
 
 <pre><code>
   districts = District.all_from_zipcode(90210)    # returns array of District objects
@@ -107,7 +133,7 @@ h2. License
 
 See the terms of usage for the "Sunlight Labs API":http://services.sunlightlabs.com/api/ and the "Google Maps API":http://code.google.com/apis/maps/terms.html.
 
-Copyright &copy; 2008 by Luigi Montanez under the MIT License.
+Copyright &copy; 2009 by Luigi Montanez under the MIT License.
 
 Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
