--- a/README.textile
+++ b/README.textile
@@ -55,14 +55,14 @@ h3. Legislator
 Time to get to the good stuff. The most useful method is @Legislator#all_for@:
 
 <pre><code>
-  congresspeople = Legislator.all_for(:address => "123 Fifth Ave New York, NY 10003")
+  congresspeople = Sunlight::Legislator.all_for(:address => "123 Fifth Ave New York, NY 10003")
   senior_senator = congresspeople[:senior_senator]
   junior_senator = congresspeople[:junior_senator]
   representative = congresspeople[:representative]
 
-  junior_senator.firstname          # returns "Hillary" 
-  junior_senator.lastname           # returns "Clinton"   
-  junior_senator.congress_office    # returns "476 Russell Senate Office Building"
+  junior_senator.firstname          # returns "Kirsten" 
+  junior_senator.lastname           # returns "Gillibrand"   
+  junior_senator.congress_office    # returns "531 Dirksen Senate Office Building"
   junior_senator.phone              # returns "202-224-4451"  
 </code></pre>
 
@@ -71,7 +71,7 @@ Note that you should make the best attempt to get a full street address, as that
 So @Legislator#all_for@ returns a hash of @Legislator@ objects, and the keys are @:senior_senator@, @:junior_senator@, and @:representative@. Make sure to review all the available fields from the "Sunlight Labs API":http://services.sunlightlabs.com/api/docs/legislators/. You can also pass in a lat/long pair:
 
 <pre><code>
-  congresspeople = Legislator.all_for(:latitude => 33.876145, :longitude => -84.453789)
+  congresspeople = Sunlight::Legislator.all_for(:latitude => 33.876145, :longitude => -84.453789)
 </code></pre>
 
 This bypasses the geocoding necessary by the Google Maps API. For social networks and other applications with a User object, it makes sense to geocode the user's address up front and save the lat/long data in the local database. Then, use the lat/long pair instead of address, which cuts a substantial bit of time from the @Legislator#all_for@ request since the Google Maps API Geocoding function doesn't have to be called.
@@ -79,7 +79,7 @@ This bypasses the geocoding necessary by the Google Maps API. For social network
 Have a five-digit zip code only? You can use the @Legislator#all_in_zipcode@ method, but keep in mind that a single zip may have multiple U.S. Representatives, as congressional district lines frequently divide populous zip codes. Unlike @Legislator#all_for@, this method returns an array of legislators, and it'll be up to you to parse through them (there will be a senior senator, a junior senator, and one or more representatives).
 
 <pre><code>
-	members_of_congress = Legislator.all_in_zipcode(90210)
+	members_of_congress = Sunlight::Legislator.all_in_zipcode(90210)
 	
 	members_of_congress.each do |member|
 		# do stuff
@@ -90,9 +90,9 @@ Have a five-digit zip code only? You can use the @Legislator#all_in_zipcode@ met
 You can also use the @Legislator#all_where@ method for searching based on available fields. Again, you'll get back an array of @Legislator@ objects:
 
 <pre><code>
-  johns = Legislator.all_where(:firstname => "John")
-  floridians = Legislator.all_where(:state => "FL")
-  dudes = Legislator.all_where(:gender => "M")
+  johns = Sunlight::Legislator.all_where(:firstname => "John")
+  floridians = Sunlight::Legislator.all_where(:state => "FL")
+  dudes = Sunlight::Legislator.all_where(:gender => "M")
 
   johns.each do |john|
     # do stuff
@@ -102,8 +102,8 @@ You can also use the @Legislator#all_where@ method for searching based on availa
 Lastly, to provide your users with a name search functionality, use @Legislator#search_by_name@, which uses fuzzy matching to compensate for nicknames and misspellings. So "Teddy Kennedey" (real name Edward Kennedy) and "Jack Murtha" (real name John Murtha) will return the correct matches. You can specify a higher confidence threshold (default set to 0.80) if you feel that the matches being returned aren't accurate enough. This also returns an array of @Legislator@ objects:
 
 <pre><code>
-	legislators = Legislator.search_by_name("Teddy Kennedey")
-	legislators = Legislator.search_by_name("Johnny Boy Kerry", 0.91)
+	legislators = Sunlight::Legislator.search_by_name("Teddy Kennedey")
+	legislators = Sunlight::Legislator.search_by_name("Johnny Boy Kerry", 0.91)
 </code></pre>
 
 
@@ -113,18 +113,18 @@ h3. District
 There's also the @District@ object. @District#get@ takes in either lat/long or an address and does it's best to return the correct Congressional District:
 
 <pre><code>
-  district = District.get(:latitude => 33.876145, :longitude => -84.453789)
+  district = Sunlight::District.get(:latitude => 33.876145, :longitude => -84.453789)
   district.state            # returns "GA"
   district.number           # returns "6"
   
-  district = District.get(:address => "123 Fifth Ave New York, NY") 
+  district = Sunlight::District.get(:address => "123 Fifth Ave New York, NY") 
 </code></pre>
 
 Finally, two more methods, @District.all_from_zipcode@ and @District.zipcodes_in@, help you out when you want to get all districts in a given zip code, or if you want to get back all zip codes in a given district.
 
 <pre><code>
-  districts = District.all_from_zipcode(90210)    # returns array of District objects
-  zipcodes = District.zipcodes_in("NY", "10")     # returns array of zip codes as strings  ["11201", "11202", "11203",...]
+  districts = Sunlight::District.all_from_zipcode(90210)    # returns array of District objects
+  zipcodes = Sunlight::District.zipcodes_in("NY", "10")     # returns array of zip codes as strings  ["11201", "11202", "11203",...]
 </code></pre>
 
 
